Fixed grid alignment for card and added colors to the others

--- a/project_group_00/styles/student.css
+++ b/project_group_00/styles/student.css
@@ -2,13 +2,35 @@
 
 
 @layer card {
-  @media only screen and (min-width: 400px) {
+  @media only screen and (max-width: 400px) {
      .card > .header > .figure{
-      margin-right: 0.5rem;
-      
-     
+      margin-right: 4rem;
     }
   }
+  @media only screen and (max-width: 450px) {
+    .card > .header > .figure{
+     margin-right: 2.9rem;
+    }
+  }
+    @media only screen and (max-width: 500px) {
+      .card > .header > .figure{
+       margin-right: 2.7rem;}
+      }
+    @media only screen and (max-width: 550px) {
+        .card > .header > .figure{
+         margin-right: 2.5rem;}
+        }
+    @media only screen and (max-width: 600px) {
+        .card > .header > .figure{
+         margin-right: 2.3rem;}
+        }    
+    @media only screen and (max-width: 650px) {
+        .card > .header > .figure{
+         margin-right: 2.1rem;}
+        }        
+ }
+
+
 
   .card {
     .header{ 
@@ -34,6 +56,7 @@
         
       }    
     }
+    
     .mainBox{
       padding-top: 2.5rem;
       padding-bottom: 2.5rem;
@@ -63,6 +86,7 @@
         
   }
 }
+
   @layer thumbnail {
     .thumbnail {
       border-width: .39rem;
